# movie-agentic-rag

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
database/: init_memory.sql  init_movie_sql.sql  init_vector.sql
src/: app.py
src/rag_agent/: __init__.py  constants.py  graph.py  utils.py
src/rag_agent/context/: __init__.py  base.py  memory.py
src/rag_agent/database/: __init__.py  connections.py  db_prompts.py
src/rag_agent/llm/: __init__.py  dashscope.py
src/rag_agent/movie_agent/: __init__.py  graphs.py  nodes.py  prompts.py  states.py  tools.py
src/rag_agent/movie_agent/formatters/: __init__.py  toon.py
src/rag_agent/movie_agent/models/: __init__.py  movie.py
src/rag_agent/tool_selection_agent/: __init__.py  graph.py  nodes.py  prompts.py  states.py
tests/: test_direct_response.py  test_formatters.py  test_language.py  test_memory.py  test_movie_prompts.py  test_routing.py  test_sql_safety.py  test_tool_selection_context.py
