[project]
name = "movie-agentic-rag"
version = "0.1.0"
description = "Movie Agentic RAG backend with SQL, pgvector, Neo4j, smart routing, self-correction, and memory."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-cli[inmem]>=0.1.0",
    "openai>=1.40.0",
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "neo4j>=5.20.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "mypy>=1.10.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rag_agent"]

[tool.setuptools.package-dir]
"rag_agent" = "src/rag_agent"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
